--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@ background: transparent;
       function resetData() {
         generateSampleData();
         draw();
-        statusEl.textContent = "Static demo data generated.";
+        statusEl.textContent = "";
       }
 
       generateSampleData();
       draw();
-      statusEl.textContent = "Enter a letter to fetch live data.";
+      statusEl.textContent = "";
     </script>
   </body>
 </html>
