--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ background: transparent;
         placeholder="Enter stock symbol (e.g. AAPL)"
         value="AAPL"
       />
-     <!-- <button onclick="fetchStockData()">Load Stock</button> -->
+    <button onclick="fetchStockData()">Load Stock</button> 
       <button onclick="resetData()">reset data</button>
     </div>
 
